# fastapi_lubanovic

./: pyproject.toml
fastapi_lubanovic/chapter1/: this.py
fastapi_lubanovic/chapter11/: auth.py
fastapi_lubanovic/chapter12/: mod1.py  test_summer.py  test_summer2.py
fastapi_lubanovic/chapter15/: main.py
fastapi_lubanovic/chapter16/: main.py
fastapi_lubanovic/chapter16/template/: list.html
fastapi_lubanovic/chapter3/: hello.py
fastapi_lubanovic/chapter3/model/: tag.py
fastapi_lubanovic/chapter4/: dull.py  greet_async.py  hilarity.py
fastapi_lubanovic/chapter5/: web.py
fastapi_lubanovic/chapter5/data/: data.py
fastapi_lubanovic/chapter5/models/: creature.py
fastapi_lubanovic/chapter6/: dependency.py
fastapi_lubanovic/chapter8/: main.py
fastapi_lubanovic/chapter8/data/: creature.py  explorer.py  init.py  user.py
fastapi_lubanovic/chapter8/fake/: creature.py  explorer.py  user.py
fastapi_lubanovic/chapter8/model/: creature.py
fastapi_lubanovic/chapter8/service/: creature.py  explorer.py  user.py
fastapi_lubanovic/chapter8/test/unit/service/: test_creature.py  test_data_creature.py  test_data_explorer.py  test_load.py
fastapi_lubanovic/chapter8/web/: creature.py  explorer.py  user.py
