[tool.poetry]
name = "fastapi-lubanovic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_lubanovic/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
mypy = "^1.5.1"
black = "^23.9.1"
uvicorn = "^0.23.2"
httpie = "^3.2.2"
requests = "^2.31.0"
httpx = "^0.25.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
