[tool.poetry]
name = "fastapi-lubanovic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_lubanovic/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
mypy = "^1.5.1"
black = "^23.9.1"
uvicorn = "^0.23.2"
httpie = "^3.2.2"
requests = "^2.31.0"
httpx = "^0.25.0"
pytest = "^7.4.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pytest-mock = "^3.11.1"
hypothesis = "^6.87.1"
schemathesis = "^3.19.7"
locust = "^2.16.1"
faker = "^19.6.2"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
